Troubleshooting 100vh issue on mobile.

--- a/theme/global.css
+++ b/theme/global.css
@@ -1,6 +1,7 @@
 #__next {
   display: flex;
   flex-direction: column;
+  height: 100%;
   min-height: 100%;
   overscroll-behavior: none;
 }
@@ -8,6 +9,7 @@
 html, body {
   overflow: hidden;
   height: 100%;
+  min-height: 100%;
 }
 
 ._aI {
